Remove guava from marid-ide